fix scrollbar dark theme

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -13,6 +13,19 @@ body {
   background-color: var(--accent-bg-cl);
 }
 
+::-webkit-scrollbar-track {
+  background-color: var(--main-grey);
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(transparent, var(--current-link));
+  border-radius: 6px;
+}
+
 // body.dark-theme > .films-gallery{
 //   background-color: rgb(95, 94, 94);
 // }
